# batch-video-codec-converter

./: .gitignore  LICENSE  README.md  app.py
tauri-v2-app/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
tauri-v2-app/src/: App.tsx  index.css  store.ts
tauri-v2-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-v2-app/src-tauri/capabilities/: default.json
tauri-v2-app/src-tauri/icons/: icon.icns
tauri-v2-app/src-tauri/src/: conversion_state.rs  dependency_manager.rs  ffmpeg.rs  lib.rs  watch_folder.rs
tauri-v2-app/src/components/: HeaderStats.tsx  MainApp.tsx  WindowControls.tsx
tauri-v2-app/src/components/QueuePanel/: EmptyState.tsx  QueueItemRow.tsx  StatusBadge.tsx  index.tsx
tauri-v2-app/src/components/SettingsSidebar/: AdvancedTab.tsx  BasicTab.tsx  UniqueTab.tsx  index.tsx
tauri-v2-app/src/hooks/: useConversion.ts  useDragDrop.ts  usePersistSettings.ts  useWindowControls.ts
tauri-v2-app/src/lib/: buildFfmpegArgs.ts  codecPresets.ts  estimateEta.ts  formatTime.ts
