[package]
name = "retro-batch"
version = "2.0.5"
description = "Batch video codec converter for video editors"
authors = ["RetroBatch Contributors"]
license = "MIT"
repository = "https://github.com/XonistReal/batch-video-codec-converter"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
reqwest = { version = "0.12", features = ["stream"] }
zip = "2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
notify = "6.1.1"
regex = "1.10.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
